--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
     </div>
     <!-- Script -->
     <script src="script.js"></script>
+    <footer>
+        <div class="copyright">
+            &copy; 2023 Gurucool Recipe Finder. All rights reserved.
+        </div>
+        <div class="developer">
+            Developed by Rahul Singh
+        </div>
+    </footer>
   </body>
 </html>
